--- a/css/company/company01.css
+++ b/css/company/company01.css
@@ -22,4 +22,7 @@
 .foo-001 { padding: 5px 40px 2px 500px; color: black; float: left; font-size: 32px; flex-flow: row; }
 .foo-001 > li { padding: 50px 0 20px 30px; font-size: 18px;  }
 #sp-01 { font-size: 18px; color: #c0c0c0;}
+.history {
+    margin-bottom:100px;
+}
 
