--- a/css/customer/customer02.css
+++ b/css/customer/customer02.css
@@ -40,7 +40,7 @@ margin-right: auto;
   background-color: rgb(236, 236, 236);
 }
 .qna td {
-  color: #777;
+  color: black;
   font-size: 14px;
 }
 
