--- a/css/company/company01.css
+++ b/css/company/company01.css
@@ -1,4 +1,8 @@
-.rod-01 { padding-right: 15px;  padding-left: 15px;  margin-right: auto;  margin-left: auto;}
+.rod-01 { 
+    padding-right: 15px;  
+    padding-left: 15px;  
+    margin-right: auto;  
+    margin-left: auto;}
 
 .tlt-001 { text-align: center; font-size: 32px; font-weight: 500; margin: 50px 0 0px 0; }
 .tlt-002 { text-align: center; font-size: 18px; font-weight: 250; margin: 2px 0 10px 0; }
@@ -22,7 +26,4 @@
 .foo-001 { padding: 5px 40px 2px 500px; color: black; float: left; font-size: 32px; flex-flow: row; }
 .foo-001 > li { padding: 50px 0 20px 30px; font-size: 18px;  }
 #sp-01 { font-size: 18px; color: #c0c0c0;}
-.history {
-    margin-bottom:100px;
-}
 
