--- a/css/customer/customer01.css
+++ b/css/customer/customer01.css
@@ -1,7 +1,42 @@
-.qwer { padding-right: 15px; padding-left: 15px; margin-right: auto; margin-left: auto; width: 1000px;}
-.cl-01 { text-align: center; font-size: 32px; margin: 30px 0 10px 0;}
-.cl-02 { text-align: center; font-size: 18px; margin: 10px 0 50px 0;}
-.t-1 { width: 100%; height: 100%; border-top: 3px solid black; border-left: 0px solid white; border-right: 0px solid white; }
-.trt-01 { text-align: center; background-color: rgb(241, 240, 240);}
-.t-3 { border-bottom: 1px solid black;}
-.foo-01 { margin: 20px; display: flex; justify-content: center                      ;}
+.qwer { 
+    padding-right: 15px; 
+    padding-left: 15px; 
+    margin-right: auto; 
+    margin-left: auto; 
+    width: 1000px;
+}
+
+.cl-01 { 
+    text-align: center; 
+    font-size: 32px; 
+    margin: 30px 0 10px 0;
+}
+.cl-02 { 
+    text-align: center; 
+    font-size: 18px; 
+    margin: 10px 0 50px 0;
+}
+
+.t-1 { 
+    width: 100%; height: 100%; 
+    border-top: 3px solid black; 
+    border-left: 0px solid white; 
+    border-right: 0px solid white; 
+}
+
+.trt-01 { 
+    text-align: center; 
+    background-color: rgb(241, 240, 240);
+}
+
+.foo-01 {
+     margin: 20px; 
+     display: flex; 
+     justify-content: center;
+    }
+
+.t-3 textarea {
+    width: 100%;
+    height: 300px;
+    border: 1px solid rgb(126, 123, 123);
+}
