--- a/css/customer/customer01.css
+++ b/css/customer/customer01.css
@@ -6,7 +6,7 @@
     width: 1000px;
 }
 
-.cl-01 { 
+.cl-01 {  
     text-align: center; 
     font-size: 32px; 
     margin: 30px 0 10px 0;
@@ -39,4 +39,24 @@
     width: 100%;
     height: 300px;
     border: 1px solid rgb(126, 123, 123);
+}
+
+
+/* 테블릿 */
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    .business-wrap{
+        width:100%;
+        padding:10px;
+        box-sizing: border-box;       
+    }
+
+}
+/* 모바일 */
+@media screen and (max-width: 767px) and (orientation: portrait) {
+  /* product */
+  .business-wrap{
+    width:100%;
+    padding:10px;
+    box-sizing: border-box;   
+    }
 }
