--- a/css/company/company03.css
+++ b/css/company/company03.css
@@ -1,4 +1,4 @@
-.ad {
+.map {
   margin: 0 auto;
   padding-top: 70px;
   padding-bottom: 50px;
@@ -6,12 +6,12 @@
   width: 70%;
 }
 
-.dc {
+.map h2 {
   font-size: 30px;
   padding-bottom: 10px;
 }
 
-.cb {
+.map {
   color: gray;
   font-size: 14px;
   padding-bottom: 100px;
@@ -22,21 +22,22 @@
   width: 100%;
   height: 150px;
   border-top: 3px solid black;
-
   font-size: 12px;
 }
+
 .companyMapContent table {
   width: 100%;
-  height: 100px;
+  height: 100%;
 }
 .companyMapContent tr {
   border-bottom: 1px solid rgb(232, 231, 231);
-  width: 200px;
+  width: 80%;
 }
 .companyMapContent th {
   text-align: center;
   border-right: 1px solid silver;
   background-color: rgb(245, 245, 245);
+  width: 20%;
 }
 .companyMapContent td {
   padding-left: 10px;
