--- a/css/main.css
+++ b/css/main.css
@@ -127,48 +127,56 @@
   width: 120px;
   height: 30px;
   font-size: 12px;
-  border: 1px solid rgb(56, 56, 145);
-  background-color: rgb(56, 56, 145);
+  border: 1px solid rgb(71, 145, 56);
+  background-color: rgb(71, 145, 56);
+  border-radius: 10px;
   color: white;
 }
 .carouselBtn:hover {
   border: 1px solid black;
   background-color: black;
+  color: white;
+
 }
 .carouselBtn a {
   color: white;
 }
-/* 섹션2 */
-.groupSection {
-  height: 250px;
+
+.carouselBtn a:link {
+  color:white;
+  text-decoration: none;
 }
-.groupSection div {
-  text-align: center;
-  padding: 10px;
-}
-.groupSection p {
-  margin: 0 auto;
-  width: 50%;
-  color: #777777;
-}
-.btn2 {
-  width: 150px;
-  height: 30px;
-  font-size: 14px;
-  border: 1px solid black;
-  background-color: white;
-  color: black;
-}
-.btn2:hover {
-  border: 1px solid rgb(56, 56, 145);
-  background-color: rgb(56, 56, 145);
+
+.carouselBtn a:visited {
   color: white;
+
+}
+
+/* 섹션2 */
+
+.section1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 100px 0px 100px 0px;
+  height: 500px;
+}
+
+#buttona {
+  background-color: rgba(13, 139, 19, 0.699);
+  width: 130px; height: 50px;
+  border : 0;
+  outline: 0;
+  border-radius: 10px;
+  color :white;
 }
 
 /* 섹션3 */
 .proMain {
   width: 100%;
-  background-color: rgb(231, 231, 231);
+  background-color:#faf9ec;
   padding-bottom: 50px;
 }
 .proSection1 {
@@ -264,7 +272,7 @@
 /* 섹션4 */
 .businessMain {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 60px; 
   width: 100%;
 }
 .businessSection1 {
@@ -297,159 +305,136 @@
   border: 1px solid rgb(197, 197, 197);
   margin: 10px;
   max-width: 250px;
-
   flex: 1 22%;
-
-  overflow: hidden;
-  position: relative;
-  width: 50%;
 }
+
 .businessImg {
   width: 100%;
   transition: all 0.2s linear;
 }
 .businessCard:hover .businessImg {
-  transform: scale(1.2, 1.2);
+  transform: scale(1.1, 1.1);
 }
 
 /* 섹션5 */
-.mainBanner {
-  position: relative;
-}
-.mainBannerImg {
-  vertical-align: middle;
-}
-.mainBannerText {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 20%;
+
+.section4 {
+  background-image: url('/img/visual04.jpg');
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  padding: 100px 0px 100px 0px;
   color: white;
-}
-.btn1 {
-  width: 100px;
-  height: 30px;
-  font-size: 12px;
-  border: 1px solid white;
-  background-color: rgba(0, 0, 0, 0);
-  color: white;
-}
-.btn1:hover {
-  border: 1px solid rgb(56, 56, 145);
-  background-color: rgb(56, 56, 145);
-}
+ }
+
 
 /* 섹션6 */
-.csMain {
-  display: flex;
-  flex-flow: row wrap;
-  padding-bottom: 100px;
-}
-.csSection1 {
-  flex: 1 100%;
-  text-align: center;
-}
-.csSection1 span {
-  color: #777777;
-}
-.csSection2 {
-  border: 1px solid rgb(192, 192, 192);
-  flex: 1 40%;
 
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-right: 20px;
-  margin-left: 10px;
-}
-
-.csSection2 div:nth-child(1) {
-  border-bottom: 1px solid rgb(192, 192, 192);
-}
-.csSection2 div:nth-child(2) {
-  padding-top: 10px;
-}
-.csSection2 h5,
-.csSection2 a,
-.csSection2 li {
+.section5 {  
   display: flex;
-  justify-content: space-between;
-  align-content: space-between;
-}
-.csSection2 h5 {
-  padding-bottom: 10px;
-}
-.csSection2 h5 a {
-  font-size: 13px;
-  color: gray;
-}
-.csSection2 li {
-  font-size: 13px;
-}
-.csSection2 li a {
-  color: gray;
-}
-.csSection2 li a:hover {
-  color: gray;
-}
-.csSection2 li label {
-  color: rgb(187, 187, 187);
-}
-.csSection3 {
-  display: flex;
-  flex: 1 40%;
+  flex-direction: column;
   text-align: center;
-}
-.csCard1,
-.csCard2,
-.csCard3 {
-  flex: 1 30%;
-  padding: 10px;
-  font-size: 12px;
-  margin-left: 10px;
-}
-.csCard1 div,
-.csCard2 div,
-.csCard3 div {
-  display: flex;
   align-items: center;
-  justify-content: center;
-  padding-top: 7px;
-}
-.csCard1 a,
-.csCard2 a,
-.csCard3 a {
-  color: white;
-}
-.csCard1 a:link,
-.csCard2 a:link,
-.csCard3 a:link {
-  color: white;
-}
-.csCard1 a:hover,
-.csCard2 a:hover,
-.csCard3 a:hover {
-  color: white;
-  text-decoration: none;
+  padding: 100px 12px 80px 12px;
+
 }
 
-.csCard1 {
-  background-color: rgb(33, 33, 153);
+.guidebox {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom:  50px;
 }
-.csCard2 {
-  background-color: rgb(76, 132, 155);
+
+.notice {
+  display: flex;
+  flex-flow: column nowrap;
+  border: 1px solid rgb(194, 192, 192);
+  width: 490px;
+  height: 169px;
+  margin: 10px;
+  padding: 0px 40px 0px 40px;
 }
-.csCard3 {
-  background-color: rgb(75, 66, 66);
+
+.box1 {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  padding-top: 10px;
+  margin-top: 10px;
+  font-size: 13px; 
 }
-.csCard1:hover {
-  background-color: rgb(7, 7, 85);
+.box1 a:link {
+  color:black;
 }
-.csCard2:hover {
-  background-color: skyblue;
+.box1 a:visited {
+  color: black;
 }
-.csCard3:hover {
-  background-color: rgb(59, 59, 59);
+.box1 a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+.list div{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  padding: 0px;
+  margin: 0px;
+}
+
+.list a:link {
+  color:black;
+}
+.list a:visited {
+  color: black;
+}
+.list a:hover {
+  text-decoration: none;
+  color:black;
+}
+
+.guide {
+  padding: 20px 5px 0px 5px;
+  margin: 5px;
+  width: 160px;
+  height: 169px;
+  display: flex;
+  flex-flow:column;
+  justify-content: center;
+}
+
+.guide h5 {
+  margin: 12px 0px 0px 0px;
+}
+
+.guide p {
+  margin: 5px 0px 0px 0px;
+}
+.guide a:link {
+  color: white;
+}
+.guide a:visited {
+  color: white;
+}
+.guide a:hover {
+  text-decoration: none;
+  color:white;
+}
+.guide p {
+  font-size: 13px;
+  font-weight: lighter;
+}
+.guide h5 {
+  font-size: 15px;
+  font-weight: bold;
 }
 
 /* footer */
@@ -495,6 +480,7 @@
   .businessImg {
     height: 180px;
   }
+}
   
   /* cs */
   .csMain {
@@ -508,16 +494,29 @@
   }
   
   /* footer */
-  .footer div a:nth-child(1) {
-    display: none;
+
+  .footer {
+    background-color: rgb(134, 86, 28);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0px 80px 0px;
   }
-  .footer div a:nth-child(4) {
-    display: none;
+  .footer a:visited {
+    color:white;
   }
-  .footer div a:nth-child(5) {
-    display: none;
+  .footer a:link {
+    color: white;
   }
-  .footer div span {
-    font-size: 12px;
+  .footer a:hover {
+    text-decoration: none;
+    color: white;
   }
-}
+  .footer a::after {
+    content: '|';
+    padding: 5px;
+    width: 1px;
+    height: 5px;  
+  }
+  
