--- a/css/product/product01_1.css
+++ b/css/product/product01_1.css
@@ -49,13 +49,14 @@
   color: #777777;
 }
 .table-bottom {
+  width: 100%;
   padding-top: 50px;
   float: left;
 }
 
 #pd-img {
-  width: 90%;
-  max-width: 700px;
+  width: 100%;
+  max-width: 1000px;
   margin:0 5px;
 }
 .table-bottom h2 {
@@ -86,4 +87,18 @@
 
 }
 
+/* 테블릿 */
+@media screen and (min-width: 768px) and (max-width: 959px) {
+  .business-wrap{
+      width:100%;
+  }
+
+}
+/* 모바일 */
+@media screen and (max-width: 767px) and (orientation: portrait) {
+/* product */
+.business-wrap{
+  width:100%;
+  }
+}
 
